# ansible-role-redhat-subscription

./: .ansible-lint  .gitignore  .gitreview  .travis.yml  README.md  ansible-requirements.txt  ansible.cfg  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
ci-scripts/: ansible-lint.sh
defaults/: main.yml
meta/: main.yml
tasks/: main.yml  portal.yml  register.yml  satellite-5.yml  satellite-6.yml  satellite.yml  unregister.yml
templates/: rhsm.conf.j2
tests/: Vagrantfile  ansible.cfg  test.yml  vagrant.yml  vars.yml
tests/vars/: portal.yml
vars/: main.yml
zuul.d/: layout.yaml
