[metadata]
name = ansible-role-redhat-subscription
summary = ansible-role-redhat-subscription - An ansible role to Manage Red Hat subscritions and repositories
description_file =
    README.md
author = Sam Doran
author_email = sdoran@redhat.com
home_page = https://github.com/openstack/ansible-role-redhat-subscription
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[global]
setup_hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    /usr/share/ansible/roles/redhat-subscription/defaults = defaults/*
    /usr/share/ansible/roles/redhat-subscription/handlers = handlers/*
    /usr/share/ansible/roles/redhat-subscription/library = library/*
    /usr/share/ansible/roles/redhat-subscription/meta = meta/*
    /usr/share/ansible/roles/redhat-subscription/tasks = tasks/*
    /usr/share/ansible/roles/redhat-subscription/templates = templates/*
    /usr/share/ansible/roles/redhat-subscription/tests = tests/*
    /usr/share/ansible/roles/redhat-subscription/vars = vars/*
    /usr/share/ansible/roles/redhat-subscription/files = files/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
